<resources>
  <string name="abbrev_month_day_no_year">MMMd</string>
  <string name="abbrev_wday_month_day_no_year_alarm">EEEMMMd</string>
  <string name="abc_action_bar_up_description">Navigate up</string>
  <string name="abc_action_mode_done">Done</string>
  <string name="abc_capital_off">OFF</string>
  <string name="abc_capital_on">ON</string>
  <string name="abc_menu_alt_shortcut_label">Alt+</string>
  <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
  <string name="abc_menu_delete_shortcut_label">delete</string>
  <string name="abc_menu_enter_shortcut_label">enter</string>
  <string name="abc_menu_function_shortcut_label">Function+</string>
  <string name="abc_menu_meta_shortcut_label">Meta+</string>
  <string name="abc_menu_shift_shortcut_label">Shift+</string>
  <string name="abc_menu_space_shortcut_label">space</string>
  <string name="abc_menu_sym_shortcut_label">Sym+</string>
  <string name="abc_prepend_shortcut_label">Menu+</string>
  <string name="abc_search_hint">Search…</string>
  <string name="abc_searchview_description_clear">Clear query</string>
  <string name="abc_searchview_description_search">Search</string>
  <string name="abc_searchview_description_submit">Submit query</string>
  <string name="abc_searchview_description_voice">Voice search</string>
  <string name="abc_slice_more">More</string>
  <string name="abc_slice_more_content">+ %1$d</string>
  <string name="abc_slice_permission_allow">Allow</string>
  <string name="abc_slice_permission_deny">Deny</string>
  <string name="abc_slice_permission_text_1">- It can read information from %1$s</string>
  <string name="abc_slice_permission_text_2">- It can take actions inside %1$s</string>
  <string name="abc_slice_permission_title">Allow %1$s to show %2$s slices?</string>
  <string name="abc_slice_show_more">Show more</string>
  <string name="abc_slice_updated">Updated %1$s</string>
  <string name="abc_toolbar_collapse_description">Collapse</string>
  <string name="accessibilit_qs_edit_tile_add_move_invalid_position">Position invalid.</string>
  <string name="accessibility_accessibility_button">Accessibility</string>
  <string name="accessibility_action_divider_bottom_full">Bottom full screen</string>
  <string name="accessibility_action_divider_left_30">Left 30%</string>
  <string name="accessibility_action_divider_left_50">Left 50%</string>
  <string name="accessibility_action_divider_left_70">Left 70%</string>
  <string name="accessibility_action_divider_left_full">Left full screen</string>
  <string name="accessibility_action_divider_right_full">Right full screen</string>
  <string name="accessibility_action_divider_top_30">Top 30%</string>
  <string name="accessibility_action_divider_top_50">Top 50%</string>
  <string name="accessibility_action_divider_top_70">Top 70%</string>
  <string name="accessibility_action_divider_top_full">Top full screen</string>
  <string name="accessibility_action_label_close_communal_hub">Close widgets on lock screen</string>
  <string name="accessibility_action_label_edit_widgets">Customize widgets</string>
  <string name="accessibility_action_label_place_widget">place selected widget</string>
  <string name="accessibility_action_label_remove_widget">remove widget</string>
  <string name="accessibility_action_label_select_widget">select widget</string>
  <string name="accessibility_action_pip_resize">Resize</string>
  <string name="accessibility_action_pip_stash">Stash</string>
  <string name="accessibility_action_pip_unstash">Unstash</string>
  <string name="accessibility_action_start_one_handed">Start one-handed mode</string>
  <string name="accessibility_action_stop_one_handed">Exit one-handed mode</string>
  <string name="accessibility_airplane_mode">Airplane mode.</string>
  <string name="accessibility_allow_diagonal_scrolling">Allow diagonal scrolling</string>
  <string name="accessibility_assistant_poodle">Voice search</string>
  <string name="accessibility_authenticate_hint">authenticate</string>
  <string name="accessibility_back">Back</string>
  <string name="accessibility_banner_message_dismiss">Dismiss</string>
  <string name="accessibility_battery_level">Battery %d percent.</string>
  <string name="accessibility_battery_level_charging">Battery charging, %d percent.</string>
  <string name="accessibility_battery_level_charging_paused">Battery %d percent, charging paused for battery protection.</string>
  <string name="accessibility_battery_level_charging_paused_with_estimate">Battery %1$d percent, %2$s, charging paused for battery protection.</string>
  <string name="accessibility_battery_level_with_estimate">Battery %1$d percent, %2$s</string>
  <string name="accessibility_battery_unknown">Battery percentage unknown.</string>
  <string name="accessibility_bluetooth_connected">Bluetooth connected.</string>
  <string name="accessibility_bluetooth_device_settings_gear">Click to configure device detail</string>
  <string name="accessibility_bluetooth_device_settings_pair_new_device">Click to pair new device</string>
  <string name="accessibility_bluetooth_device_settings_see_all">Click to see all devices</string>
  <string name="accessibility_bluetooth_name">Connected to %s.</string>
  <string name="accessibility_bouncer">enter screen lock</string>
  <string name="accessibility_brightness">Display brightness</string>
  <string name="accessibility_bubble_dismissed">Bubble dismissed.</string>
  <string name="accessibility_camera_button">Camera</string>
  <string name="accessibility_cast_name">Connected to %s.</string>
  <string name="accessibility_casting">@string/quick_settings_casting</string>
  <string name="accessibility_clear_all">Clear all notifications.</string>
  <string name="accessibility_content_description_for_communal_hub">Widgets on lock screen</string>
  <string name="accessibility_control_change_favorite">favorite</string>
  <string name="accessibility_control_change_unfavorite">unfavorite</string>
  <string name="accessibility_control_decrease_window_height">Decrease height of magnifier</string>
  <string name="accessibility_control_decrease_window_width">Decrease width of magnifier</string>
  <string name="accessibility_control_favorite">Favorited</string>
  <string name="accessibility_control_favorite_position">Favorited, position %d</string>
  <string name="accessibility_control_increase_window_height">Increase height of magnifier</string>
  <string name="accessibility_control_increase_window_width">Increase width of magnifier</string>
  <string name="accessibility_control_move">Move to position %d</string>
  <string name="accessibility_control_move_down">Move down</string>
  <string name="accessibility_control_move_left">Move left</string>
  <string name="accessibility_control_move_right">Move right</string>
  <string name="accessibility_control_move_up">Move up</string>
  <string name="accessibility_control_not_favorite">Unfavorited</string>
  <string name="accessibility_control_zoom_in">Zoom in</string>
  <string name="accessibility_control_zoom_out">Zoom out</string>
  <string name="accessibility_data_saver_on">Data Saver is on</string>
  <string name="accessibility_desc_close">Close</string>
  <string name="accessibility_desc_lock_screen">Lock screen</string>
  <string name="accessibility_desc_notification_icon">%1$s notification: %2$s</string>
  <string name="accessibility_desc_notification_shade">Notification shade.</string>
  <string name="accessibility_desc_qs_notification_shade">Quick settings and Notification shade.</string>
  <string name="accessibility_desc_quick_settings">Quick settings.</string>
  <string name="accessibility_desc_quick_settings_edit">Quick settings editor.</string>
  <string name="accessibility_desc_work_lock">Work lock screen</string>
  <string name="accessibility_divider">Split screen divider</string>
  <string name="accessibility_enter_hint">enter device</string>
  <string name="accessibility_ethernet_connected">Ethernet.</string>
  <string name="accessibility_ethernet_disconnected">Ethernet disconnected.</string>
  <string name="accessibility_fingerprint_label">Fingerprint sensor</string>
  <string name="accessibility_floating_button_action_double_tap_to_toggle">toggle</string>
  <string name="accessibility_floating_button_action_edit">Edit</string>
  <string name="accessibility_floating_button_action_move_bottom_left">Move bottom left</string>
  <string name="accessibility_floating_button_action_move_bottom_right">Move bottom right</string>
  <string name="accessibility_floating_button_action_move_out_edge_and_show">Move out edge and show</string>
  <string name="accessibility_floating_button_action_move_to_edge_and_hide_to_half">Move to edge and hide</string>
  <string name="accessibility_floating_button_action_move_top_left">Move top left</string>
  <string name="accessibility_floating_button_action_move_top_right">Move top right</string>
  <string name="accessibility_floating_button_action_remove_menu">Remove</string>
  <string name="accessibility_floating_button_docking_tooltip">Move button to the edge to hide it temporarily</string>
  <string name="accessibility_floating_button_hidden_notification_text">Tap to show accessibility button</string>
  <string name="accessibility_floating_button_hidden_notification_title">Accessibility button hidden</string>
  <string name="accessibility_floating_button_migration_tooltip">Tap to open accessibility features. Customize or replace this button in Settings.

<annotation id="link">View settings</annotation></string>
  <string name="accessibility_floating_button_undo">Undo</string>
  <string name="accessibility_floating_button_undo_message_label_text">%s shortcut removed</string>
  <string name="accessibility_floating_button_undo_message_number_text">{count, plural, =1 {# shortcut removed} other {# shortcuts removed} }</string>
  <string name="accessibility_hearing_device_pair_new_device">Click to pair new device</string>
  <string name="accessibility_home">Home</string>
  <string name="accessibility_ime_switch_button">Switch input method</string>
  <string name="accessibility_key">Custom navigation button</string>
  <string name="accessibility_location_active">Location requests active</string>
  <string name="accessibility_lock_icon">Device locked</string>
  <string name="accessibility_long_click_tile">Open settings</string>
  <string name="accessibility_magnification_done">Done</string>
  <string name="accessibility_magnification_fullscreen">Full screen</string>
  <string name="accessibility_magnification_large">Large</string>
  <string name="accessibility_magnification_medium">Medium</string>
  <string name="accessibility_magnification_settings_panel_description">Magnification settings</string>
  <string name="accessibility_magnification_small">Small</string>
  <string name="accessibility_magnification_zoom">Zoom</string>
  <string name="accessibility_magnifier_edit">Edit</string>
  <string name="accessibility_magnifier_size">Magnifier size</string>
  <string name="accessibility_managed_profile">Work profile</string>
  <string name="accessibility_manual_zen_less_time">Less time.</string>
  <string name="immersive_cling_description">To exit, swipe down from the top of your screen</string>
  <string name="immersive_cling_positive">Got it</string>
  <string name="immersive_cling_title">Viewing full screen</string>
  <string name="inline_done_button">Done</string>
  <string name="pair_new_bluetooth_devices">Pair new device</string>
  <string name="quick_settings_bluetooth_audio_sharing_button">Share audio</string>
  <string name="quick_settings_bluetooth_label">Bluetooth</string>
  <string name="quick_settings_bluetooth_tile_subtitle">Tap to connect or disconnect a device</string>
  <string name="see_all_bluetooth_devices">See all</string>
  <string name="turn_on_bluetooth">Use Bluetooth</string>
  <string name="turn_on_bluetooth_auto_tomorrow">Automatically turn on tomorrow</string>
</resources>