<?xml version='1.0' encoding='utf-8' ?>
<androidx.constraintlayout.widget.ConstraintLayout android:id="@id/root"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      style="@style/Widget.SliceView.Panel" xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:androidprv="http://schemas.android.com/apk/prv/res/android">
  <TextView android:textAppearance="@style/TextAppearance.Dialog.Title"
            android:textSize="24.0sp"
            android:ellipsize="end"
            android:gravity="center"
            android:id="@id/bluetooth_tile_dialog_title"
            android:paddingTop="24.0dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quick_settings_bluetooth_label"
            android:maxLines="1"
            app:layout_constraintBottom_toTopOf="@id/bluetooth_tile_dialog_subtitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
  <TextView android:textAppearance="@style/TextAppearance.Dialog.Body.Message"
            android:ellipsize="end"
            android:gravity="center"
            android:id="@id/bluetooth_tile_dialog_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4.0dp"
            android:layout_marginBottom="@dimen/bluetooth_dialog_layout_margin"
            android:text="@string/quick_settings_bluetooth_tile_subtitle"
            android:maxLines="2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bluetooth_tile_dialog_title" />
  <View android:id="@id/bluetooth_tile_dialog_progress_background"
        android:background="?android:^attr-private/colorSurfaceVariant"
        android:layout_width="0.0dp"
        android:layout_height="0.0dp"
        app:layout_constraintBottom_toBottomOf="@id/bluetooth_tile_dialog_progress_animation"
        app:layout_constraintEnd_toEndOf="@id/bluetooth_tile_dialog_progress_animation"
        app:layout_constraintStart_toStartOf="@id/bluetooth_tile_dialog_progress_animation"
        app:layout_constraintTop_toTopOf="@id/bluetooth_tile_dialog_progress_animation" />
  <ProgressBar android:id="@id/bluetooth_tile_dialog_progress_animation"
               android:visibility="invisible"
               android:layout_width="152.0dp"
               android:layout_height="4.0dp"
               android:layout_marginTop="16.0dp"
               android:indeterminate="true"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toBottomOf="@id/bluetooth_tile_dialog_subtitle"
               style="@style/TrimmedHorizontalProgressBar" />
  <androidx.core.widget.NestedScrollView android:id="@id/scroll_view"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="21.0dp"
                        android:minHeight="@dimen/bluetooth_dialog_scroll_view_min_height"
                        android:fillViewport="true"
                        app:layout_constrainedHeight="true"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/bluetooth_tile_dialog_progress_animation">
    <androidx.constraintlayout.widget.ConstraintLayout android:id="@id/scroll_layout"
                          android:layout_width="fill_parent"
                          android:layout_height="wrap_content">
      <TextView android:textAppearance="@style/TextAppearance.Dialog.Title"
                android:textSize="16.0sp"
                android:ellipsize="end"
                android:gravity="center|start"
                android:id="@id/bluetooth_toggle_title"
                android:clickable="false"
                android:layout_width="0.0dp"
                android:layout_height="68.0dp"
                android:text="@string/turn_on_bluetooth"
                android:maxLines="2"
                android:paddingStart="36.0dp"
                android:paddingEnd="15.0dp"
                app:layout_constraintEnd_toStartOf="@id/bluetooth_toggle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
      <Switch android:theme="@style/MainSwitch.Settingslib"
              android:gravity="center|start"
              android:id="@id/bluetooth_toggle"
              android:layout_width="wrap_content"
              android:layout_height="68.0dp"
              android:thumb="@drawable/settingslib_thumb_selector"
              android:contentDescription="@string/turn_on_bluetooth"
              android:track="@drawable/settingslib_track_selector"
              android:switchMinWidth="@dimen/settingslib_switch_track_width"
              android:paddingEnd="40.0dp"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintStart_toEndOf="@id/bluetooth_toggle_title"
              app:layout_constraintTop_toTopOf="parent" />
      <androidx.constraintlayout.widget.Group android:id="@id/bluetooth_auto_on_toggle_layout"
                            android:visibility="gone"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:constraint_referenced_ids="bluetooth_auto_on_toggle_title,bluetooth_auto_on_toggle,bluetooth_auto_on_toggle_info_icon,bluetooth_auto_on_toggle_info_text" />
      <TextView android:textAppearance="@style/TextAppearance.Dialog.Title"
                android:textSize="16.0sp"
                android:ellipsize="end"
                android:gravity="center|start"
                android:id="@id/bluetooth_auto_on_toggle_title"
                android:clickable="false"
                android:layout_width="0.0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20.0dp"
                android:minHeight="68.0dp"
                android:text="@string/turn_on_bluetooth_auto_tomorrow"
                android:maxLines="2"
                android:paddingStart="36.0dp"
                android:paddingEnd="15.0dp"
                app:layout_constraintEnd_toStartOf="@id/bluetooth_auto_on_toggle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/bluetooth_toggle_title" />
      <Switch android:theme="@style/MainSwitch.Settingslib"
              android:gravity="center|start"
              android:id="@id/bluetooth_auto_on_toggle"
              android:layout_width="wrap_content"
              android:layout_height="68.0dp"
              android:layout_marginBottom="20.0dp"
              android:thumb="@drawable/settingslib_thumb_selector"
              android:contentDescription="@string/turn_on_bluetooth_auto_tomorrow"
              android:track="@drawable/settingslib_track_selector"
              android:switchMinWidth="@dimen/settingslib_switch_track_width"
              android:paddingEnd="40.0dp"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintStart_toEndOf="@id/bluetooth_auto_on_toggle_title"
              app:layout_constraintTop_toBottomOf="@id/bluetooth_toggle" />
      <ImageView android:id="@id/bluetooth_auto_on_toggle_info_icon"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20.0dp"
                 android:layout_marginBottom="@dimen/bluetooth_dialog_layout_margin"
                 android:src="@drawable/ic_info_outline"
                 android:tint="?android:attr/textColorTertiary"
                 android:paddingStart="36.0dp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/bluetooth_auto_on_toggle" />
      <TextView android:textAppearance="@style/TextAppearance.Dialog.Body.Message"
                android:id="@id/bluetooth_auto_on_toggle_info_text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20.0dp"
                android:paddingStart="36.0dp"
                android:paddingEnd="40.0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/bluetooth_auto_on_toggle_info_icon" />
      <androidx.recyclerview.widget.RecyclerView android:id="@id/device_list"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/bluetooth_toggle" />
      <Button android:textAppearance="@style/TextAppearance.Dialog.Title"
              android:textSize="14.0sp"
              android:ellipsize="end"
              android:id="@id/see_all_button"
              android:background="@drawable/bluetooth_tile_dialog_bg_off"
              android:visibility="gone"
              android:layout_width="0.0dp"
              android:layout_height="64.0dp"
              android:text="@string/see_all_bluetooth_devices"
              android:maxLines="1"
              android:drawablePadding="20.0dp"
              android:contentDescription="@string/accessibility_bluetooth_device_settings_see_all"
              android:drawableStart="@drawable/ic_arrow_forward"
              android:textDirection="locale"
              android:textAlignment="viewStart"
              android:paddingStart="20.0dp"
              android:paddingEnd="0.0dp"
              android:drawableTint="?android:attr/textColorPrimary"
              app:layout_constraintBottom_toTopOf="@id/pair_new_device_button"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toBottomOf="@id/device_list"
              style="@style/BluetoothTileDialog.Device" />
      <Button android:textAppearance="@style/TextAppearance.Dialog.Title"
              android:textSize="14.0sp"
              android:ellipsize="end"
              android:id="@id/pair_new_device_button"
              android:background="@drawable/bluetooth_tile_dialog_bg_off"
              android:visibility="gone"
              android:layout_width="0.0dp"
              android:layout_height="64.0dp"
              android:text="@string/pair_new_bluetooth_devices"
              android:maxLines="1"
              android:drawablePadding="20.0dp"
              android:contentDescription="@string/accessibility_bluetooth_device_settings_pair_new_device"
              android:drawableStart="@drawable/ic_add"
              android:textDirection="locale"
              android:textAlignment="viewStart"
              android:paddingStart="20.0dp"
              android:paddingEnd="0.0dp"
              android:drawableTint="?android:attr/textColorPrimary"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toBottomOf="@id/see_all_button"
              style="@style/BluetoothTileDialog.Device" />
      <androidx.constraintlayout.widget.Barrier android:id="@id/barrier"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:barrierDirection="bottom"
                            app:constraint_referenced_ids="pair_new_device_button,bluetooth_auto_on_toggle_info_text" />
      <Button android:ellipsize="end"
              android:id="@id/audio_sharing_button"
              android:visibility="gone"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginTop="9.0dp"
              android:layout_marginBottom="@dimen/dialog_bottom_padding"
              android:text="@string/quick_settings_bluetooth_audio_sharing_button"
              android:maxLines="1"
              android:drawablePadding="10.0dp"
              android:drawableStart="@drawable/ic_bt_le_audio_sharing_18dp"
              android:layout_marginStart="@dimen/dialog_side_padding"
              android:layout_marginEnd="@dimen/dialog_side_padding"
              android:drawableTint="?android:attr/textColorPrimary"
              app:layout_constrainedWidth="true"
              app:layout_constraintBottom_toBottomOf="parent"
              app:layout_constraintEnd_toStartOf="@id/done_button"
              app:layout_constraintHorizontal_bias="0.0"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toBottomOf="@id/barrier"
              app:layout_constraintVertical_bias="1.0"
              style="@style/Widget.Dialog.Button.BorderButton" />
      <Button android:ellipsize="end"
              android:id="@id/done_button"
              android:focusable="true"
              android:clickable="true"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginTop="9.0dp"
              android:layout_marginBottom="@dimen/dialog_bottom_padding"
              android:text="@string/inline_done_button"
              android:maxLines="1"
              android:layout_marginStart="@dimen/dialog_side_padding"
              android:layout_marginEnd="@dimen/dialog_side_padding"
              app:layout_constraintBottom_toBottomOf="parent"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintTop_toBottomOf="@id/barrier"
              app:layout_constraintVertical_bias="1.0"
              style="@style/Widget.Dialog.Button" />
    </androidx.constraintlayout.widget.ConstraintLayout>
  </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>